--- a/deploy/docker-compose.yml
+++ b/deploy/docker-compose.yml
@@ -11,11 +11,11 @@ services:
     ports:
       - "8001:8001"
     env_file:
-      - ../environments/.env
+      - ../environments/.env.local
     depends_on:
       - user_balance_db
     networks:
-      - user_balance_network
+      - deploy_zimran_network
 
   user_balance_db:
     container_name: user_balance_db
@@ -23,20 +23,19 @@ services:
     image: postgres:17
     ports:
       - "5433:5432"
-    env_file:
-      - ../environments/.env
     environment:
-      POSTGRES_DB: postgres
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: "postgres"
+      POSTGRES_USER: "postgres"
+      POSTGRES_PASSWORD: "postgres"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - balance_db_data:/var/lib/postgresql/data
     networks:
-      - user_balance_network
+      - deploy_zimran_network
 
 
 volumes:
-  pgdata:
+  balance_db_data:
 
 networks:
-  user_balance_network:
+  deploy_zimran_network:
+    external: true
