--- a/environments/.env.local
+++ b/environments/.env.local
@@ -1,5 +1,12 @@
-DB_HOST=user_balance_db
+DB_HOST=balance_db
 DB_PORT=5432
 DB_NAME=postgres
 DB_USER=postgres
 DB_PASSWORD=postgres
+
+
+RABBITMQ_URL=amqp://admin:admin@balance_rabbitmq:5672/
+BALANCE_EXCHANGE=balance_updates
+BALANCE_EXCHANGE_TYPE=direct
+BALANCE_QUEUE=balance_updates
+BALANCE_ROUTING_KEY=balance.update
